force-app/main/default/objects/E_MOC_Functional_Location__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E_MOC_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E-MOC Application</label>
        <referenceTo>E_MOC_Application__c</referenceTo>
        <relationshipName>EMOC_Functional_Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <formula>Functional_Location__r.First_Related_Equipment__r.Name</formula>
        <label>Equipment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Location_Description__c</fullName>
        <formula>Functional_Location__r.Description__c</formula>
        <label>Functional Location Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Functional Location</label>
        <referenceTo>Functional_Location__c</referenceTo>
        <relationshipName>EMOC_Functional_Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center__c</fullName>
        <formula>Functional_Location__r.MainWorkCenter__r.Name</formula>
        <label>Main Work Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_of_Main_Work_Center__c</fullName>
        <formula>Functional_Location__r.mainWorkCenterPlant__r.Name</formula>
        <label>Plant of Main Work Center</label>
        <type>Text</type>
    </fields>
    <label>E-MOC Functional Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Functional_Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FNL-{00000000}</displayFormat>
        <label>EMOC Functional Location No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>